trying to get the previewComplete to talk to controller- using link function

--- a/src/client/partials/directives/complete/preview.html
+++ b/src/client/partials/directives/complete/preview.html
@@ -4,7 +4,7 @@
   <span ng-if="item.type=='txt'">{{item.val}}</span>
   <select ng-if="item.type=='select'">
     <option></option>
-    <option ng-repeat="option in item.options">{{option.val}}</option>
+    <option ng-change="checkCorrect()" ng-repeat="option in item.options">{{option.val}}</option>
   </select>
 </span>
 </div>
