adding utils with shuffle array Adding practiceComplete directive.

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -88,6 +88,7 @@ angular.module('sllp.app').config(function($httpProvider) {
     $httpProvider.defaults.headers.common['X-XSRFToken'] = xsrf_val;
 });
 </script>
+<script src="/static/js/utils.js"></script>
 <script src="/static/js/config.js"></script>
 <script src="/static/js/services.js"></script>
 <script src="/static/js/controllers/login.js"></script>
