adding angular gettext

--- a/src/client/partials/directives/complete/preview.html
+++ b/src/client/partials/directives/complete/preview.html
@@ -1,9 +1,9 @@
-{{exercise}}
+
 <div>
 <span  ng-repeat="item in exercise.items">
   <span ng-if="item.type=='txt'">{{item.val}}</span>
   <select ng-if="item.type=='select'">
-    <option></option>
+    <option translate>No selection</option>
     <option ng-change="checkCorrect()" ng-repeat="option in item.options">{{option.val}}</option>
   </select>
 </span>
