--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -77,6 +77,7 @@
 <script src="/static/bower_components/ng-tags-input/ng-tags-input.min.js"></script>
 <link rel="stylesheet" type="text/css" href="/static/bower_components/ng-tags-input/ng-tags-input.min.css">
 
+<script src="/static/bower_components/angular-gettext/dist/angular-gettext.min.js"></script>
 
 <!-- App Code and controllers -->
 
