upgraded bootstrap and angular file are loaded locally

--- a/src/templates/index.cdn.html
+++ b/src/templates/index.cdn.html
@@ -6,7 +6,7 @@
   <meta name="generator" content="mongodb-tornado-angular"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-  <link href="/static/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
 
 
   <style type="text/css">
@@ -74,13 +74,13 @@
 </div>
 {% module xsrf_form_html() %};
 <!-- angualr code from cdn -->
-<script src="/static/bower_components/angular/angular.min.js"></script>
-<script src="/static/bower_components/angular-cookies/angular-cookies.js"></script>
-<script src="/static/bower_components/angular-resource/angular-resource.js"></script>
-<script src="/static/bower_components/angular-route/angular-route.js"></script>
-<script src="/static/bower_components/angular-sanitize/angular-sanitize.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-cookies.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-resource.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-route.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.20/angular-sanitize.js"></script>
 <!-- ui.bootstrap from cdn -->
-<script src="/static/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.js"></script>
 
 <!-- External Components -->
 <script src="/static/bower_components/angular-youtube-mb/dist/angular-youtube-embed.min.js"></script>
