--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -50,8 +50,11 @@
         <li>
           <a href="/api/auth/google">Login With Google</a>
         </li>
+
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" translate>
             Languages
             <b class="caret"></b>
           </a>
@@ -60,6 +63,9 @@
               <a ng-click="setUiLanguage(language._id)" >{{!language.name}}</a>
             </li>
           </ul>
+        </li>
+        <li>
+          <a href="/api/auth/google">Login</a>
         </li>
       </ul>
     </nav>
