changing location of directive templates. back to using external templates - will now need to clear cache when working with templates

--- a/src/client/partials/directives/match_edit.html
+++ b/src/client/partials/directives/match_edit.html
@@ -1,8 +1,9 @@
+<div class="help" translate>Match exercise requires the student to match two parts of a phrase</div>
 <table class="table">
   <thead>
   <tr>
-    <td>Part 1 </td>
-    <td>Part 2 </td>
+    <td trnaslate>Part 1 </td>
+    <td trnaslate>Part 2 </td>
   </tr>
   </thead>
   <tbody>
@@ -12,3 +13,4 @@
   </tr>
   </tbody>
 </table>
+<div><button translate ng-click="addItem()">Add</button></div>
