--- a/src/client/partials/directives/video_edit.html
+++ b/src/client/partials/directives/video_edit.html
@@ -1,3 +1,4 @@
+<div class="help" translate>Add a link to a youtube movie</div>
 <div class="list-inset">
     <input placeholder="video url" ng-model="exercise.videoUrl" />
 </div>
