--- a/src/client/partials/directives/vocabulary_edit.html
+++ b/src/client/partials/directives/vocabulary_edit.html
@@ -1,8 +1,9 @@
+<div class="help" translate>A vocabulary, a set of words and meanings/translation </div>
 <table class="table">
   <thead>
   <tr>
-    <td>Term </td>
-    <td>Translation </td>
+    <td translate> Term </td>
+    <td translate>Translation </td>
   </tr>
   </thead>
   <tbody>
@@ -12,3 +13,4 @@
   </tr>
   </tbody>
 </table>
+<div><button ng-click="addItem()">Add</button></div>
