--- a/src/client/partials/directives/vocabulary_preview.html
+++ b/src/client/partials/directives/vocabulary_preview.html
@@ -1,3 +1,4 @@
+<div class="help" translate>Select the matching translation for the words</div>
 <div class="list list inset">
   <div class="item row" ng-repeat="item in exercise.items">
     <div class="col col-50">{{item.term}} </div>
