correction translate for gettext

--- a/src/client/partials/exercise.html
+++ b/src/client/partials/exercise.html
@@ -1,4 +1,4 @@
-<h3 translate>Lesson: {{lesson.title}}</h3>
+<h3 > <span translate>Lesson</span>: {{lesson.title}}</h3>
 
 
 <ul class="pagination">
