--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -54,8 +54,8 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" translate>
-            Languages
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+            <span translate>Languages</span>
             <b class="caret"></b>
           </a>
           <ul ng-controller="ProfileController" class="dropdown-menu">
