--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -29,20 +29,24 @@
     </div>
     <nav class="collapse navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
+        <!--
         <li>
           <a href="#/lesson">Lesson</a>
         </li>
         <li>
           <a href="#/profile">Profile</a>
         </li>
+
+        -->
         <li>
           <a href="#/help">Help</a>
         </li>
         <li>
           <a href="#/about">About</a>
         </li>
+        <!--
         <li>
-          <a href="#" ng-click="logout();">Logout</a>
+          <a href="#" ng-click="logout()">Logout</a>
         </li>
         <li>
           <a href="#/login">Login</a>
@@ -50,7 +54,7 @@
         <li>
           <a href="/api/auth/google">Login With Google</a>
         </li>
-
+        -->
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
