cleanup menu - removing inactive entries

--- a/src/client/partials/about.html
+++ b/src/client/partials/about.html
@@ -1,4 +1,52 @@
-<div>
-  <h3 translate >About</h3>
-  Name of controller: {{controllerName}}
+<div class="jumbotron">
+  <h2 translate>Social Language Learning Platform</h2>
+
+  <p class="lead" translate>
+    Create, Share and Learn a new languages should be free and accessible to anyone.
+    We are working on an open, extendable platform allowing anyone to easily create new language lessons.
+  </p>
+  <p class="lead" translate>
+    This project is an open source project looking for people to join.
+  </p>
+
+  <a href="https://github.com/davidvoler/social-language-learning-platform">Source Code on github</a>
+
+  <p>
+    <a class="btn btn-success" href="#" role="button" translate>Start Learning</a>
+    <a class="btn btn-success" href="#" role="button" translate>Create & Share a lesson</a>
+  </p>
+</div>
+
+<!-- Example row of columns -->
+<div class="row">
+  <div class="col-lg-4">
+    <h2 translate>How does it work?</h2>
+
+    <p class="text-danger" translate>
+
+    </p>
+
+    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+      condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
+      sed odio dui. </p>
+
+    <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
+  </div>
+  <div class="col-lg-4">
+    <h2>The idea</h2>
+
+    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+      condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec
+      sed odio dui. </p>
+
+    <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
+  </div>
+  <div class="col-lg-4">
+    <h2>How can I help?</h2>
+
+    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis
+      euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa.</p>
+
+    <p><a class="btn btn-primary" href="#" role="button">View details &raquo;</a></p>
+  </div>
 </div>
