--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -20,12 +20,12 @@
   <div class="container" ng-controller="LoginController">
     <div class="navbar-header">
       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
+        <span class="sr-only" translate>Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand">Home</a>
+      <a href="/" class="navbar-brand" translate>Home</a>
     </div>
     <nav class="collapse navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
@@ -39,10 +39,10 @@
 
         -->
         <li>
-          <a href="#/help">Help</a>
+          <a href="#/help" translate>Help</a>
         </li>
         <li>
-          <a href="#/about">About</a>
+          <a href="#/about" translate>About</a>
         </li>
         <!--
         <li>
@@ -69,7 +69,7 @@
           </ul>
         </li>
         <li>
-          <a href="/api/auth/google">Login</a>
+          <a href="/api/auth/google" translate>Login</a>
         </li>
       </ul>
     </nav>
