--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -29,21 +29,18 @@
     </div>
     <nav class="collapse navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
-        <!--
+
         <li>
           <a href="#/lesson">Lesson</a>
+        </li>
+        <li>
+          <a href="#/practice">Practice</a>
         </li>
         <li>
           <a href="#/profile">Profile</a>
         </li>
 
-        -->
-        <li>
-          <a href="#/help" translate>Help</a>
-        </li>
-        <li>
-          <a href="#/about" translate>About</a>
-        </li>
+
         <!--
         <li>
           <a href="#" ng-click="logout()">Logout</a>
@@ -57,6 +54,12 @@
         -->
       </ul>
       <ul class="nav navbar-nav navbar-right">
+        <li>
+          <a href="#/help" translate>Help</a>
+        </li>
+        <li>
+          <a href="#/about" translate>About</a>
+        </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
             <span translate>Languages</span>
