--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -16,7 +16,7 @@
     }
   </style>
 
-<body ng-app="sllp.app">
+<body ng-app="sllp.web">
 <header class="navbar navbar-default navbar-static-top" role="banner">
   <div class="container" ng-controller="LoginController">
     <div class="navbar-header">
@@ -66,11 +66,13 @@
             <span translate>Languages</span>
             <b class="caret"></b>
           </a>
+          <!--
           <ul ng-controller="ProfileController" class="dropdown-menu">
             <li ng-repeat="language in getLanguages()">
               <a ng-click="setUiLanguage(language._id)" >{{!language.name}}</a>
             </li>
           </ul>
+          -->
         </li>
         <li>
           <a href="/api/auth/google" translate>Login</a>
@@ -105,37 +107,19 @@
 <script src="/static/js/translations.js"></script>
 
 <!-- App Code and controllers -->
-
-<script src="/static/js/app.js"></script>
+<script src="/static/src/auth/auth_module.js"></script>
+<script src="/static/src/web/sllp_web.js"></script>
+<script src="/static/src/web/routes.js"></script>
 <script>
-  angular.module('sllp.app').config(function ($httpProvider) {
+  angular.module('sllp.web').config(function ($httpProvider) {
     var _xsrf = document.getElementsByName('_xsrf');
     var xsrf_val = _xsrf[0].value;
     $httpProvider.defaults.headers.common['X-XSRFToken'] = xsrf_val;
   });
 </script>
 
-
-<script src="/static/js/utils.js"></script>
-<script src="/static/js/config.js"></script>
-<script src="/static/js/services.js"></script>
-<script src="/static/js/controllers/login.js"></script>
-<script src="/static/js/controllers/login_google.js"></script>
-<script src="/static/js/controllers/controllers.js"></script>
-<script src="/static/js/controllers/lesson.js"></script>
-<script src="/static/js/controllers/home.js"></script>
-<script src="/static/js/controllers/exercise.js"></script>
-<script src="/static/js/controllers/profile.js"></script>
-
-
-<script src="/static/js/directives/complete.js"></script>
-<script src="/static/js/directives/match.js"></script>
-<script src="/static/js/directives/mix.js"></script>
-<script src="/static/js/directives/question.js"></script>
-<script src="/static/js/directives/text.js"></script>
-<script src="/static/js/directives/vocabulary.js"></script>
-<script src="/static/js/directives/video.js"></script>
-
+<script src="/static/src/auth/services.js"></script>
+<script src="/static/src/auth/views/login/login.js"></script>
 
 </body>
 </html>
