adding home page + controller

--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -108,6 +108,9 @@
 
 <!-- App Code and controllers -->
 <script src="/static/src/auth/auth_module.js"></script>
+<script src="/static/src/lesson/lesson_module.js"></script>
+<script src="/static/src/home/home_module.js"></script>
+
 <script src="/static/src/web/sllp_web.js"></script>
 <script src="/static/src/web/routes.js"></script>
 <script>
@@ -120,6 +123,13 @@
 
 <script src="/static/src/auth/services.js"></script>
 <script src="/static/src/auth/views/login/login.js"></script>
+
+<script src="/static/src/lesson/services/edit.js"></script>
+<script src="/static/src/lesson/services/learn.js"></script>
+
+<script src="/static/src/home/views/home.js"></script>
+
+
 
 </body>
 </html>
