--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!--
   <base href="/">
+  -->
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title translate>Social Language Learning Platform</title>
   <meta name="generator" content="mongodb-tornado-angular"/>
@@ -32,13 +34,13 @@
       <ul class="nav navbar-nav">
 
         <li>
-          <a href="/lesson">Lesson</a>
+          <a href="#/lesson/list">Lesson</a>
         </li>
         <li>
-          <a href="/practice">Practice</a>
+          <a href="#/practice">Practice</a>
         </li>
         <li>
-          <a href="/profile">Profile</a>
+          <a href="#/profile">Profile</a>
         </li>
 
 
@@ -127,7 +129,14 @@
 <script src="/static/src/lesson/services/edit.js"></script>
 <script src="/static/src/lesson/services/learn.js"></script>
 
+<script src="/static/src/lesson/views/add/add.js"></script>
+<script src="/static/src/lesson/views/edit/edit.js"></script>
+<script src="/static/src/lesson/views/list/list.js"></script>
+<script src="/static/src/lesson/views/practice/practice.js"></script>
+
+
 <script src="/static/src/home/views/home.js"></script>
+
 
 
 
