--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!--
   <base href="/">
+  -->
   <meta http-equiv="content-type" content="text/html; charset=UTF-8">
   <title translate>Social Language Learning Platform</title>
   <meta name="generator" content="mongodb-tornado-angular"/>
@@ -32,13 +34,13 @@
       <ul class="nav navbar-nav">
 
         <li>
-          <a href="/lesson">Lesson</a>
+          <a href="#/lesson">Lesson</a>
         </li>
         <li>
-          <a href="/practice">Practice</a>
+          <a href="#/practice">Practice</a>
         </li>
         <li>
-          <a href="/profile">Profile</a>
+          <a href="#/profile">Profile</a>
         </li>
 
 
@@ -56,10 +58,10 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a href="/help" translate>Help</a>
+          <a href="#/help" translate>Help</a>
         </li>
         <li>
-          <a href="/about" translate>About</a>
+          <a href="#/about" translate>About</a>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
