--- a/src/client/partials/lesson_edit.html
+++ b/src/client/partials/lesson_edit.html
@@ -35,7 +35,7 @@
         </tags-input>
       </td>
       <td>
-        <a href="/help"><i class="glyphicon glyphicon-question-sign"> </i><span translate>Help</span></a>
+        <a href="#/help"><i class="glyphicon glyphicon-question-sign"> </i><span translate>Help</span></a>
       </td>
     </tr>
     </tbody>
