--- a/src/client/src/home/views/home.html
+++ b/src/client/src/home/views/home.html
@@ -1,4 +1,5 @@
 <h3>Home</h3>
+{{profile}}
 
 <a href="#/lessons">lessons</a>
 <a href="#/lesson/add">lesson add</a>
@@ -9,14 +10,14 @@
   <form class="form-inline" role="form">
   <div class="form-group">
     <label for="language">Language</label>
-    <select id="language" ng-model="lesson.language" class="form-control">
-      <option value="language._id" ng-repeat="language in languages">{{language.name}}</option>
+    <select ng-change="setLang()"  id="language" ng-model="lang" class="form-control">
+      <option value="{{language._id}}" ng-repeat="language in languages">{{language.name}}</option>
     </select>
   </div>
   <div class="form-group">
     <label for="explanation_language">Explanation Language</label>
-    <select id="explanation_language" ng-model="lesson.explanation_language" class="form-control">
-      <option value="language._id" ng-repeat="language in languages">{{language.name}}</option>
+    <select ng-change="setExpLang()"  id="explanation_language" ng-model="exp_lang" class="form-control">
+      <option value="{{language._id}}" ng-repeat="language in languages">{{language.name}}</option>
     </select>
   </div>
   <input class="form-control" ng-model="q" placeholder="Free Text Search">
