--- a/src/client/src/home/views/home.html
+++ b/src/client/src/home/views/home.html
@@ -1,5 +1,5 @@
 <h3>Home</h3>
-{{profile}}
+{{home.profile}}
 
 <a href="#/lessons">lessons</a>
 <a href="#/lesson/add">lesson add</a>
@@ -10,14 +10,18 @@
   <form class="form-inline" role="form">
   <div class="form-group">
     <label for="language">Language</label>
-    <select ng-change="setLang()"  id="language" ng-model="lang" class="form-control">
-      <option value="{{language._id}}" ng-repeat="language in languages">{{language.name}}</option>
+    <select ng-change="home.setLang()"  id="language"
+            ng-model="home.lang"
+            class="form-control" ng-options="l._id as l.name for l in home.languages">
     </select>
   </div>
   <div class="form-group">
     <label for="explanation_language">Explanation Language</label>
-    <select ng-change="setExpLang()"  id="explanation_language" ng-model="exp_lang" class="form-control">
-      <option value="{{language._id}}" ng-repeat="language in languages">{{language.name}}</option>
+    <select ng-change="home.setExpLang()"
+            id="explanation_language"
+            ng-model="home.exp_lang"
+            class="form-control"
+            ng-options="l._id as l.name for l in home.languages">
     </select>
   </div>
   <input class="form-control" ng-model="q" placeholder="Free Text Search">
