--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -28,7 +28,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a href="/" class="navbar-brand" translate>Home</a>
+      <a href="#/" class="navbar-brand" translate>Home</a>
     </div>
     <nav class="collapse navbar-collapse" role="navigation">
       <ul class="nav navbar-nav">
