--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -58,10 +58,10 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a href="/help" translate>Help</a>
+          <a href="#/help" translate>Help</a>
         </li>
         <li>
-          <a href="/about" translate>About</a>
+          <a href="#/about" translate>About</a>
         </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -132,6 +132,7 @@
 
 <script src="/static/src/lesson/services/edit.js"></script>
 <script src="/static/src/lesson/services/learn.js"></script>
+<script src="/static/src/lesson/services/exercise.js"></script>
 
 <script src="/static/src/auth/views/login/login.js"></script>
 
