copied directive javascript  change to the new format

--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -115,6 +115,37 @@
 <script src="/static/src/profile/profile_module.js"></script>
 <script src="/static/src/home/home_module.js"></script>
 
+<script src="/static/src/exercise_directives/exercise_directives.js"></script>
+
+<script src="/static/src/exercise_directives/complete/edit.js"></script>
+<script src="/static/src/exercise_directives/complete/preview.js"></script>
+
+<script src="/static/src/exercise_directives/match/edit.js"></script>
+<script src="/static/src/exercise_directives/match/preview.js"></script>
+
+
+<script src="/static/src/exercise_directives/mix/edit.js"></script>
+<script src="/static/src/exercise_directives/mix/preview.js"></script>
+
+
+<script src="/static/src/exercise_directives/question/edit.js"></script>
+<script src="/static/src/exercise_directives/question/preview.js"></script>
+
+
+<script src="/static/src/exercise_directives/text/edit.js"></script>
+<script src="/static/src/exercise_directives/text/preview.js"></script>
+
+
+<script src="/static/src/exercise_directives/video/edit.js"></script>
+<script src="/static/src/exercise_directives/video/preview.js"></script>
+
+
+<script src="/static/src/exercise_directives/vocabulary/edit.js"></script>
+<script src="/static/src/exercise_directives/vocabulary/preview.js"></script>
+
+
+
+
 <script src="/static/src/web/sllp_web.js"></script>
 <script src="/static/src/web/routes.js"></script>
 <script src="/static/src/lesson/routes.js"></script>
